# pocitacova_grafika_cviki

./: .gitignore  kocka.vtk.txt
cviko1/: CMakeLists.txt  cube.vtk
cviko1/src/: ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  Viewer3DWidget.cpp  Viewer3DWidget.h  ViewerWidget.cpp  ViewerWidget.h
